Add in some helper stuff

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -29,7 +29,7 @@
 <script>
 
 
-    // markup time!
+    // Insert code here
 
 
 </script>
@@ -43,6 +43,28 @@
                 margin: 10px;
                 padding: 10px;
             }
+
+        .object {
+            border-width: 2px;
+            border-style: solid;
+        }
+
+        .belt {
+            border-color: yellow;
+        }
+
+        .glass {
+            border-color: blue;
+        }
+
+        .pet {
+            border-color: green;
+        }
+
+        .can {
+            border-color: red;
+        }
+
     </style>
 </body>
 </html>
